building on mono theme

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
                                     Read article 
                                     <span class="next-arrow"><i class="fas fa-arrow-right"></i></span>
                                 </a>
-                                <span class="post-date d-none d-md-inline-block" datetime="{{ post.date | date: "%Y-%m-%d" }}">Publised {{ post.date | date: "%B %-d, %Y" }}</span>
+                                <!-- <span class="post-date d-none d-md-inline-block" datetime="{{ post.date | date: "%Y-%m-%d" }}">Publised {{ post.date | date: "%B %-d, %Y" }}</span> -->
                             </div>
                         </div>
                     </div>
